@@ -7,9 +7,9 @@
 }
 
 #(define (display-systemno smob)
-  (let* ((this-line (Grob::line_scm smob))
-	 (systems (Spanner::get_broken_into
-		   (Grob::original_scm this-line))))
+  (let* ((this-line (get-line smob))
+	 (systems (get-broken-into
+		   (get-original this-line))))
     (display smob)
     (display (list-index systems this-line))
     (newline)))
@@ -17,9 +17,9 @@
 
 #(define (display-system-count smob)
   (display (length
-	    (Spanner::get_broken_into
-	     (Grob::original_scm
-	      (Grob::line_scm smob))))))
+	    (get-broken-into
+	     (get-original
+	      (get-line smob))))))
 
   
   
