@@ -19,24 +19,22 @@
 #include "system.hh"
 #include "group-interface.hh"
 
-
-MAKE_SCHEME_CALLBACK (Spanner, get_broken_into, 1);
-SCM
-Spanner::get_broken_into (SCM smob)
+/* spanner in name? */
+LY_DEFINE (get_broken_into,
+	  "get-broken-into", 1, 0, 0, (SCM spanner),
+	   "
+Return broken-into list for @var{spanner}.
+"
+)
 {
-  if (Spanner *me = dynamic_cast<Spanner*> (unsmob_grob (smob)))
-#if 0    
-    return ly_grob_array2scm (me->broken_into_l_arr_);
-#else
-  {
-      SCM s = SCM_EOL;
-      for (int i = me->broken_into_l_arr_.size (); i; i--)
-	s = gh_cons (me->broken_into_l_arr_[i-1]->self_scm (), s);
-      return s;
-  }
-#endif
-  
-  return SCM_EOL;
+  ///  Spanner *me = unsmob_spanner (spanner);
+  Spanner *me = dynamic_cast<Spanner*> (unsmob_grob (spanner));
+  SCM_ASSERT_TYPE (me, spanner, SCM_ARG1, __FUNCTION__, "spanner");
+
+  SCM s = SCM_EOL;
+  for (int i = me->broken_into_l_arr_.size (); i; i--)
+    s = gh_cons (me->broken_into_l_arr_[i-1]->self_scm (), s);
+  return s;
 }
 
 void
